@@ -4439,7 +4439,7 @@ void ObjectMoleculeSort(ObjectMolecule *I) /* sorts atoms and bonds */
     int n_bytes = sizeof(int)*I->NAtom;
     int already_in_order = true;
     int i_NAtom = I->NAtom;
-    index=AtomInfoGetSortedIndex(I->Obj.G,I->AtomInfo,i_NAtom,&outdex);
+    index=AtomInfoGetSortedIndex(I->Obj.G,&I->Obj,I->AtomInfo,i_NAtom,&outdex);
     for(a=0;a<i_NAtom;a++) {
       if(index[a]!=a) {
         already_in_order = false;
